# tokzip

./: .gitignore  AGENTS.md  CLAUDE.md  FORMAT.md  GEMINI.md  README.md  bunfig.toml  index.html  lefthook.yml  package.json  results.jsonl  tsconfig.json
.cursor/rules/: general.mdc
.github/workflows/: benchmark.yml  rust.yml  test-rust.yml
.lefthook/post-merge/: prepare.sh
.lefthook/pre-push/: check.sh
rust/: Cargo.toml
rust/crates/bench/: Cargo.toml
rust/crates/bench/src/: main.rs
rust/crates/tokzip/: Cargo.toml
rust/crates/tokzip/src/: lib.rs  lzrc.rs  rc.rs
scripts/: corpus.ts
scripts/bench/: bench.ts  competitors.ts  publishPages.sh  quick.ts  renderCharts.ts  streamBench.ts
scripts/bench/site/: index.html
scripts/corpus/: fetchNl.ts  fetchOss.ts  generateLlm.ts  nl-sources.json  oss-sources.json  prompt-matrix.json  shared.ts  split.ts
scripts/train/: train.ts  trainDictionary.ts  wrapperContent.ts
src/: checksum.ts  container.ts  dictionary.ts  errors.ts  fastMode.ts  fences.ts  format.ts  huffman.ts  index.ts  languageIds.ts  lz.ts  moduleData.ts  moduleRegistry.ts  radix64.ts  radix85.ts  slots.ts  smallMode.ts  storage.ts  stream.ts  validator.ts
src/languages/: c.ts  cpp.ts  csharp.ts  css.ts  dart.ts  enUs.ts  haskell.ts  html.ts  index.ts  jaJp.ts  java.ts  javascript.ts  jsp.ts  php.ts  python.ts  ruby.ts  rust.ts  text.ts  typescript.ts  zhCn.ts  zhTw.ts  zig.ts
test/: conformance.test.ts  fences.test.ts  internal.test.ts  languages.test.ts  resilience.test.ts  roundtrip.test.ts
